plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // The following line declares the mojmap mappings, you may use other mappings as well
        // mappings loom.officialMojangMappings()
        // The following line declares the yarn mappings you may select this one as well.
        //mappings "net.fabricmc:yarn:1.19+build.4:v2"

        mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
//        mappings loom.layered {
//            //it.mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
//            it.mappings "dev.architectury:yarn-mappings-patch-forge:1.20.4+build.1"
//        }

        implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.10'
        implementation 'com.demonwav.mcdev:annotations:2.1.0'
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = rootProject.mod_version
    group = rootProject.maven_group

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
        maven {url = "https://api.modrinth.com/maven"}
        maven {url = "https://www.cursemaven.com/"}
        maven { url "https://maven.shedaniel.me/" }
        maven { url "https://maven.terraformersmc.com/releases/" }
        maven { url "https://mvnrepository.com/artifact/com.demonwav.mcdev/annotations" }
    }


    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }
    //compileJava.options.fork = true
    //compileJava.options.forkOptions.executable = 'C:/Program Files/Java/jdk-17.0.3.1/'
    java {
        withSourcesJar()
    }
}


